# SO1_202111849

./: .gitignore  README.md
Proyecto1/: crear_contenedores.sh  crontab.txt  logs.txt
Proyecto1/containers/: crear_contenedores.sh  crontab.txt  logs.txt
Proyecto1/docs/: readme.md
Proyecto1/module/: Makefile  metricas.c  so_metrics.c
Proyecto1/prueba/: Makefile  modulo.c
Proyecto1/rust/: Cargo.toml  Dockerfile  docker-compose.yml  log.txt
Proyecto1/rust/src/: docker_run.rs  main.rs
Proyecto2/docs/tech/: readme.md
Proyecto2/go/client/: .env  Dockerfile  client.go  go.mod  go.sum
Proyecto2/go/server/: .env.template  Dockerfile  go.mod  server.go
Proyecto2/k8s/: ingress.yaml  namespace.yaml
Proyecto2/k8s/go/: go-client-deployment.yaml  go-client-service.yaml  grpc-server.yaml  service.yaml
Proyecto2/k8s/kafka/: cluster.yaml  kafka-cluster.yaml  kafka-consumer-deployment.yaml  kafka-producer-deployment.yaml  kafka-producer-service.yaml  kafka-service.yaml  kafka-topic.yaml  topic.yaml
Proyecto2/k8s/rabbit/: rabbit-consumer-deployment.yaml  rabbit-producer-deployment.yaml
Proyecto2/k8s/redis/: redis-deployment.yaml  redis-secret.yaml  redis-service.yaml
Proyecto2/k8s/rust/: hpta.yaml  ingress.yaml  rust-api-deployment.yaml  rust-api-service.yaml  rust.yaml  service.yaml
Proyecto2/locust/: index.py  index2.py
Proyecto2/locust/traffic/: package-lock.json
Proyecto2/rust/api/: .env  Cargo.toml  Dockerfile
Proyecto2/rust/client/: Cargo.toml
Proyecto2/rust/server/: Cargo.toml
Proyecto2/rust/server/src/: main.rs
(+23 files in other folders)
