[package]
name = "rust_app"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[[bin]]
name = "rust_app"
path = "src/main.rs"  # Aquí estamos indicando que el archivo a ejecutar es docker_run.rs