[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0"